Compiler/Examples/ERROR/is test.slang
///*
if a is T and then b is T do
end
//*/
if a is T do
	if b is T do
	end
end
